feat: enhance configuration and local development setup for runs-ai-analyzer with structured AI output and RabbitMQ integration